chore: 23.9.0 - 4.8.0
* refactor(CO-764): remove 2FA, Devices, Trusted devices, App Specific Password, Remote Wipe (#258)

* chore: remove 2FA and trusted devices

* chore: put back admin system account logic

* chore: remove features and APIs related to devices

* refactor: remove remote wipe + other devices feature

- removes other devices features such as Verification Code

* chore:  remove devices from db

- remove devices table

* refactor: remove Sync of device

- remove DeviceStatusInfo.java and Sync feature of device

* chore: put back auth in SoapCommandUtil

- adds back auth in SoapCommandUtil

* chore: remove static from AuthToken enums

- remove static keyword for Usage and TokenType enums

* chore: 23.8.0 devel

* feat(CO-770): remove UC Service and Voice features (#260)

* chore: upgrade pre-commit to new common rules (#265)

* chore: update Log4j to version 2.x (#237)


Co-Authored with @frisonisland 
ref: [CO-715]

* feat: [CO-767] Remove stale config from Carbonio SOAP Service  (#266)

* feat: [CO-767] remove stale config

- all zimlet related config was removed
- change the display name of service to Carbonio SOAP Service

* chore: Update description of env var

- we probably going to remove this mapping in future.
more on spike doc.

* chore: cleanup

* chore(CO-777): remove bring up/down service IP requests/responses (#268)

* chore(CO-777): remove ServiceIp features

- remove ServiceIp features as they are unused and part of NetworkEdition

* chore: remove BringDownServiceIPResponse.java

- remove said class POJO

* chore(CO-783): remove replication classes (#270)

- removes classes in com.zimbra.soap.replication
- removes references from wsdl generator
- remove ReplicationConstants.java

* chore: update exclude pattern (#275)

* chore: update exclude pattern

- to also exclude accesscontrol/generated/*.java files
- imporve rights exclusion to omit rights-*-.xml files

